--- a/WorkTracker/Layouts/PaperView.xaml
+++ b/WorkTracker/Layouts/PaperView.xaml
@@ -3,7 +3,57 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="UiInterface.Layouts.PaperView"
              Title="PaperView">
+    
+    <ContentPage.ToolbarItems>
+       
+        <ToolbarItem Text="Option" Clicked="tbi_ShowOptions_Clicked" Order="Secondary"></ToolbarItem>
+        <ToolbarItem Text="New Job" Clicked="bnt_newJob_Clicked" Order="Secondary"></ToolbarItem>
+        <ToolbarItem Text="New Quote"  Clicked="bnt_newJob_Clicked" Order="Secondary"></ToolbarItem>
+        <ToolbarItem Text="__________"  Order="Secondary"></ToolbarItem>
+        <ToolbarItem Text="View"  Clicked="bnt_View_Clicked" Order="Secondary"></ToolbarItem>
+        
+    </ContentPage.ToolbarItems>
     <StackLayout>
+        <DatePicker x:Name="dp_DoneDate" IsVisible="false"></DatePicker>
+        <Grid x:Name="g_filters" BackgroundColor="#005555" IsVisible="false">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Label x:Name="l_filterName" Grid.Row="0" Grid.Column="0" Text="{Binding FilterName}" VerticalOptions="Center"></Label>
+            <Picker Grid.Row="0" Grid.Column="1" x:Name="p_filter_selection" SelectedIndexChanged="p_FilterSelected"></Picker>
+        </Grid>
+
+        <Grid x:Name="g_options" BackgroundColor="{AppThemeBinding Dark=#005555, Light=#AED7EF}" IsVisible="false">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+               
+               
+            </Grid.ColumnDefinitions>
+            <HorizontalStackLayout Grid.Row="0" Grid.Column="0" Padding="4">
+                <Label Text="Show Canceled Jobs" VerticalOptions="Center"></Label>
+                <CheckBox x:Name="cb_showCanceledJobs" IsChecked="True" BackgroundColor="Transparent"></CheckBox>
+            </HorizontalStackLayout>
+
+            <HorizontalStackLayout Grid.Row="0" Grid.Column="1" HorizontalOptions="End" Padding="4">
+                <Label Text="Mark Done Date" VerticalOptions="Center"></Label>
+                <DatePicker x:Name="dp_markDate" DateSelected="dp_MarkDate_Selected"></DatePicker>
+            </HorizontalStackLayout>
+
+            <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Hide" HorizontalOptions="Center" BackgroundColor="Transparent" 
+                    BorderColor="{AppThemeBinding Light=Black, Dark=White}" BorderWidth="2" TextColor="{AppThemeBinding Light=Black, Dark=White}"
+                    VerticalOptions="Center" Clicked="bnt_hideOptions_Clicked"></Button>
+        </Grid>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
@@ -15,7 +65,6 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="3" Grid.ColumnSpan="2" Text="New Job" BackgroundColor="Transparent" TextColor="OrangeRed" BorderColor="OrangeRed" BorderWidth="2" Clicked="bnt_newJob_Clicked"></Button>
         </Grid>
         <CollectionView x:Name="c_jobList" VerticalOptions="StartAndExpand">
             <CollectionView.ItemTemplate>
@@ -35,14 +84,16 @@
                             <ColumnDefinition Width="0.08*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <BoxView HorizontalOptions="FillAndExpand" VerticalOptions="End" HeightRequest="1" Color="White" Grid.Column="0" Grid.ColumnSpan="9"/>
+                        <BoxView HorizontalOptions="FillAndExpand" VerticalOptions="End" HeightRequest="1" Color="{AppThemeBinding Light=black, Dark=white}" Grid.Column="0" Grid.ColumnSpan="9"/>
 
 
-                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="White" Grid.Column="3" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
-                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="White" Grid.Column="4" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
-                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="White" Grid.Column="5" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
-                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="White" Grid.Column="6" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
-                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="White" Grid.Column="7" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
+                        <BoxView HorizontalOptions="FillAndExpand" VerticalOptions="Center" HeightRequest="1" Color="{AppThemeBinding Light=black, Dark=white}" Grid.Column="0" Grid.ColumnSpan="9" IsVisible="{Binding IsCanceled}"/>
+                        
+                        <!--BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="{AppThemeBinding Light=black, Dark=white}" Grid.Column="3" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
+                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="{AppThemeBinding Light=black, Dark=white}" Grid.Column="4" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
+                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="{AppThemeBinding Light=black, Dark=white}" Grid.Column="5" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
+                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="{AppThemeBinding Light=black, Dark=white}" Grid.Column="6" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/>
+                        <BoxView HorizontalOptions="Start" VerticalOptions="StartAndExpand" WidthRequest="1" Color="{AppThemeBinding Light=black, Dark=white}" Grid.Column="7" Grid.Row="0" IsVisible="{Binding ShowJobInformation}"/-->
 
 
                         <ContentView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="{Binding RowSpan}" Padding="4" IsVisible="{Binding ShowJobInformation}"  IsEnabled="{Binding ShowJobInformation}">
