--- a/WorkTracker/Layouts/PaperView.xaml
+++ b/WorkTracker/Layouts/PaperView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="UiInterface.Layouts.PaperView"
+             xmlns:local="clr-namespace:UiInterface.Layouts"
              Title="Job List">
     
     <ContentPage.ToolbarItems>
@@ -69,9 +70,9 @@
 
         <Label x:Name="l_showNoJobs" Text="Welcome To Work Tracker. There are currently no jobs. Use the menu to add a job." FontSize="Large" HorizontalOptions="Center"></Label>
         <Button x:Name="bnt_ViewTutorial"  Text="View Tutorial" HorizontalOptions="Center" TextColor="Green" BackgroundColor="Transparent" BorderColor="Green" BorderWidth="2" FontAttributes="Bold" Clicked="bnt_ViewTutorial_Clicked"></Button>
-        <CollectionView x:Name="c_jobList" VerticalOptions="StartAndExpand">
+        <CollectionView x:Name="c_jobList" VerticalOptions="StartAndExpand" RemainingItemsThreshold="3">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="local:PaperItem">
                     <Grid TranslationX="{Binding TranslastionX}">
                         <Grid.RowDefinitions>
                             <RowDefinition></RowDefinition>
