--- a/WorkTracker/Layouts/FindCustomer.xaml
+++ b/WorkTracker/Layouts/FindCustomer.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="UiInterface.Layouts.LinkCustomerLayout"
-             Title="LinkCustomerLayout">
+             Title="Find Customer">
     <StackLayout>
         <Label x:Name="l_pRef" Text="Payment Reference" Padding="2" HorizontalOptions="Center" FontSize="Large" FontAttributes="Bold"></Label>
 
